--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["next/babel"],
   "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
     [
       "styled-components",
       {
