--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "annyang": "^2.6.1",
     "next": "9.1.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
@@ -15,5 +16,8 @@
     "react-three-fiber": "^3.0.2",
     "styled-components": "^4.4.0",
     "three": "^0.109.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0"
   }
 }
